--- a/ExportMAUIChartToPDF/ExportMAUIChartToPDF.csproj
+++ b/ExportMAUIChartToPDF/ExportMAUIChartToPDF.csproj
@@ -50,9 +50,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-		<PackageReference Include="Syncfusion.Maui.Charts" Version="21.1.35" />
-		<PackageReference Include="Syncfusion.Maui.Core" Version="21.1.35" />
-		<PackageReference Include="Syncfusion.Pdf.NET" Version="21.1.35" />
+		<PackageReference Include="Syncfusion.Maui.Charts" Version="*" />
+		<PackageReference Include="Syncfusion.Maui.Core" Version="*" />
+		<PackageReference Include="Syncfusion.Pdf.NET" Version="*" />
 	</ItemGroup>
 
 </Project>
